# exact-function-plotter

./: .gitignore  README.md  function-plotter.cabal  stack.yaml  stack.yaml-ghc  stack.yaml-ghc-9.21  stack.yaml-ghcjs  stack.yaml-ghcjs-9.21
canvas/: LICENCE  function-plotter-canvas.cabal
canvas/src-ghcjs/: CanvasPlotter.hs
canvas/src-mock/: CanvasPlotter.hs
src/: AffineFractal.hs  Curve.hs  Expression.hs  Function.hs  Main.hs  Rectangle.hs
src/Main/: Enclosure.hs  Model.hs
